# flamescope

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  model.rs
tests/: snapshot.rs
tests/snapshots/: snapshot__basic.snap
