[package]
name = "flamescope"
version = "0.1.1"
description = "Export flame data to speedscopes profile format"
authors = ["coolreader18 <33094578+coolreader18@users.noreply.github.com>"]
repository = "https://github.com/coolreader18/flamescope"
documentation = "https://docs.rs/flamescope"
license = "MIT"
license-file = "LICENSE"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
flame = "0.2"
indexmap = "1.0"

[dev-dependencies]
insta = { version = "1.7", features = ["redactions"] }
