[package]
name = "flamescope"
version = "0.1.3"
description = "Export flame data to speedscopes profile format"
authors = ["Noa <coolreader18@gmail.com>"]
repository = "https://github.com/coolreader18/flamescope"
documentation = "https://docs.rs/flamescope"
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
flame = "0.2"
indexmap = "2.0"

[dev-dependencies]
insta = { version = "1.7", features = ["redactions", "json"] }
